# idpy

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Pipfile  README.md  package-lock.json  pyproject.toml  run.py  setup.cfg
.github/workflows/: build.yml  codeql-analysis.yml
app/: __init__.py  config.py  idp_config.py  index.py  saml_config.py  views.py
app/idp_config_resource/: __init__.py
app/metadata/: __init__.py  generate_metadata.py  idp_metadata_resource.py  sp_metadata_resource.py
app/models/: __init__.py  sp_metadata.py  user.py
app/pki/: create-cert.sh  create_cert.sh
app/reset/: __init__.py
app/resources/global_attributes/: __init__.py
app/resources/index/: __init__.py
app/resources/login/: __init__.py
app/resources/metadata/: __init__.py  generate_metadata.py  idp_metadata_resource.py
app/resources/sso/: __init__.py
app/schemas/: __init__.py  base.py  sp_metadata.py  user.py
app/sso/: __init__.py
app/templates/: index.html  login.html
app/users/: __init__.py
frontend/: package-lock.json  package.json  rollup.config.js  tailwind.config.js
frontend/src/: App.svelte  utils.ts
test/: conftest.py  sp_config.py  test_idp_config.py  test_sp_config.py
test/functional/: test_home_page.py  test_idp_metadata_resource.py  test_index_resource.py  test_login_resource.py  test_sp_metadata_list_resource.py  test_sp_metadata_resource.py  test_sso_page.py  test_sso_resource.py  test_users_list_resource.py  test_users_resource.py
test/metadata/: generate_metadata.py
test/pki/: create_cert.sh
(+7 files in other folders)
